<resources>
    <string name="app_name">Task Management</string>
    <string name="search_en">Search</string>
    <string name="title_en">Task Management(TM)</string>
    <string name="fab_sub_add_note_en">Add Note</string>
    <string name="fab_sub_add_task_en">Add Task</string>
    <string name="fab_sub_language_en">Languages</string>
    <string name="note_exported_to">Note exported successfully</string>
    <string name="note_saved">Note saved</string>
    <string name="notes_deleted">Notes deleted</string>
    <string name="notes_exported_to">Notes exported successfully</string>
    <string name="note_imported_successfully">Note imported successfully</string>
    <string name="notes_imported_successfully">Notes imported successfully</string>
    <string name="main_note_label">Notepad</string>
    <string name="add_new_note">Add new Note</string>
    <string name="Tittle">Tittle..</string>
    <string name="content">Content...</string>
    <string name="all_note">All note</string>
    <string name="no_note">No note !</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete_note">Delete notes</string>
    <string name="search_video">Search video</string>
    <string name="alltask">All task</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="notify">Notification</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="create_at">Create at </string>
    <string name="task_title">Task Title</string>
    <string name="add_sub_task">Add sub task</string>
    <string name="done">Done</string>
    <string name="about">About </string>
    <string name="hours"> hours</string>
    <string name="minutes"> minutes</string>
    <string name="nows">Now</string>
    <string name="to_late">late</string>
    <string name="day"> days</string>
    <string name="year"> years</string>
    <string name="create_on">Create on: </string>
    <string name="delete">Delete</string>
    <string name="by">By :</string>
    <string name="save_to">Saved to</string>
    <string name="mess_del_note">Delete Note?</string>
    <string name="edit_note">Edit Note</string>
    <string name="mess_note">Please input Title and Content</string>
    <string name="error_exporting_notes">Error exporting notes!</string>
    <string name="error_importing_notes">Error importing notes!</string>
    <string name="error_Text_could">ERROR - Text could not beadded</string>
    <string name="error_loading_list">Error loading list of notes!</string>
    <string name="error_loading_note">Error loading note!</string>
    <string name="note_mul_del_succ">Note(s) Delete successfully !</string>
    <string name="no_note_select">No Note(s) selected</string>
    <string name="text_file_save">Text file Saved !</string>
    <string name="enter_title_item">Please enter the title of item.</string>
    <string name="enter_title_task">Please enter the title of task.</string>
    <string name="sure_delete_task">Are you sure delete this task?</string>
</resources>
