<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note.AddOrEditNote"
    android:background="#ffffff">



    <TextView
        android:id="@+id/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/add_new_note"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#1C86EE"/>

    <EditText
        android:id="@+id/input_noteTitle"
        android:layout_below="@+id/action"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Tittle"
        android:layout_marginTop="10dp"
        android:fontFamily=""
        />

    <EditText

        android:layout_below="@id/input_noteTitle"
        android:id="@+id/input_noteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textSize="15sp"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:hint="@string/content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_noteContent"
        android:id="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/cancel"/>

</RelativeLayout>
