<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".note.AddOrEditNote"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:id="@+id/tit"
            android:textStyle="bold"
            android:fontFamily=""
            android:textColor="#1C86EE"/>

        <TextView

            android:id="@+id/view_noteTitle"
            android:textSize="30sp"
            android:layout_alignRight="@+id/tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tittle"
            android:gravity="center"
            android:fontFamily=""
            />


    </LinearLayout>


    <TextView

        android:id="@+id/view_noteContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="15sp"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="4dp"
        android:hint="@string/content"
        android:fontFamily="casual"/>
</LinearLayout>
