<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edt_title_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/task_title" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:textSize="20sp"
            android:textOff="Off"
            android:textOn="On"
            android:showText="true"
            app:switchMinWidth="100dp"
            android:gravity="center_vertical"
            android:text="@string/notify"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/from"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/tv_date_start"
            android:textStyle="bold"
            android:text="Fri, May 24, 2019"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:id="@+id/tv_time_start"
            android:hint="22:30"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/to"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textStyle="bold"
            android:id="@+id/tv_date_end"
            android:text="Fri, May 30, 2019"
            android:gravity="center"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textStyle="bold"
            android:id="@+id/tv_time_end"
            android:hint="22:30"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edt_add_task"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:hint="@string/add_sub_task" />
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>