<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="13dp"
            android:background="@drawable/vien_tron">
            <com.mancj.materialsearchbar.MaterialSearchBar
                style="@style/MaterialSearchBarLight"
                app:mt_speechMode="false"
                app:mt_navIconEnabled="true"
                app:mt_navIconTint="#000000"
                app:mt_placeholder="@string/search_en"
                app:mt_backIconUseTint="false"
                app:mt_maxSuggestionsCount="10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/searchBar" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/view_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/floating_action"/>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/vien_tron"
                    android:layout_weight="5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/title_en"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/pink"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center"
                        android:text="@string/alltask"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:textSize="25sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/view_home_nav"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>