<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:id="@+id/linear_languare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="210dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#DCDCDC"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/txt_subfab_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:text="@string/fab_sub_language_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <com.nightonke.boommenu.BoomMenuButton
            android:id="@+id/bmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:bmb_shadowEffect="false"
            app:bmb_buttonEnum="textInsideCircle"
            app:bmb_piecePlaceEnum="piecePlace_dot_3_1"
            app:bmb_buttonPlaceEnum="buttonPlace_sc_3_1"
            app:bmb_normalColor="@color/coral" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="145dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#DCDCDC"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/txt_subfab_add_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:text="@string/fab_sub_add_note_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/subfab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/coral"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_note_add_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#DCDCDC"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/txt_subfab_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/fab_sub_add_task_en"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/coral"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_check_black_24dp"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:backgroundTint="@color/orangered"
        app:fabSize="normal"/>
</android.support.design.widget.CoordinatorLayout>